<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/export_points"
        android:textColor="@color/primaryColor" />

    <TextView
        android:id="@+id/points_count"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/zero"
        android:textColor="@color/primaryColor" />

    <TextView
        android:id="@+id/points_count_subtitle"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/points_to_export" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_collecting"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/start_collecting"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset_collecting"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:enabled="false"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    <TextView
        android:id="@+id/save_export_title"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/save_export"
        android:textColor="@color/primaryColor"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/save_export_subtitle"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/save_info_message"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_share"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/share"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:visibility="invisible" />
</LinearLayout>