<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/device_information"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/device_information"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_name"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/device_information"
        tools:text="Nicola's Myo" />

    <TextView
        android:id="@+id/device_name_subtitle"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/device_name"
        app:layout_constraintTop_toBottomOf="@+id/device_name" />

    <TextView
        android:id="@+id/device_address"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/device_name_subtitle"
        tools:text="11:22:33:44:55:66" />

    <TextView
        android:id="@+id/device_address_subtitle"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/device_address"
        app:layout_constraintTop_toBottomOf="@+id/device_address" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/device_address_subtitle" />

    <TextView
        android:id="@+id/device_status_label"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/device_status"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/device_status"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/device_status_label"
        android:text="@string/disconnected" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_connect"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten_grid_size"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@+id/device_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_status"
        android:text="@string/connect" />

    <ProgressBar
        android:id="@+id/progress_connect"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ten_grid_size"
        android:alpha="0"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/button_connect"
        app:layout_constraintEnd_toStartOf="@+id/button_connect"
        app:layout_constraintTop_toBottomOf="@+id/button_connect" />


</androidx.constraintlayout.widget.ConstraintLayout>